# Inotebook_backend

./: .gitignore  README.md  example.env  format.sh  logger.yaml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  version.py
app/api/: router.py
app/api/endpoints/: notes.py  user.py
app/api/routes/: user.py
app/core/: config.py  cutom_types.py
app/db/: base.py
app/middlewares/: exception_handler.py
app/models/: common.py  errors.py  notes.py  user.py
app/repository/: base.py  notes.py  user.py
app/schemas/: notes.py  user.py
app/utils/: custom_exception.py
app/utils/auth/: auth_barare.py  auth_utils.py
